1 - 新規作成
2 - uploadFromFileUrlメソッド、uploadFromGoogleDriveメソッドを追加
3 - getAppFilesメソッド、deleteAppFileメソッドを追加