@@ -1,3 +1,4 @@
 1 - 新規作成
 2 - uploadFromFileUrlメソッド、uploadFromGoogleDriveメソッドを追加
 3 - getAppFilesメソッド、deleteAppFileメソッドを追加
+4 - executeBatchRunOnMagicPodメソッドのAndroid対応
